--- a/prometheus.yml
+++ b/prometheus.yml
@@ -8,20 +8,20 @@ global:
 scrape_configs:
   - job_name: prometheus
     scheme: https
-    metrics_path: /prometheus
+    metrics_path: /prometheus/metrics
     static_configs:
       - targets: ['flixlist.tech']
 
   - job_name: node-exporter
     scheme: https
-    metrics_path: /node-exporter
+    metrics_path: /node-exporter/metrics
     static_configs:
       - targets: ['flixlist.tech']
 
   - job_name: cadvisor
     scrape_interval: 5s
     scheme: https
-    metrics_path: /cadvisor
+    metrics_path: /cadvisor/metrics
     static_configs:
       - targets: ['flixlist.tech']
 
