--- a/prometheus.yml
+++ b/prometheus.yml
@@ -7,21 +7,20 @@ global:
 
 scrape_configs:
   - job_name: prometheus
-    scheme: https
-    metrics_path: /prometheus/metrics
+    scrape_interval: 5s
     static_configs:
-      - targets: ['flixlist.tech']
+      - targets:
+        - prometheus:9090
 
   - job_name: node-exporter
-    scheme: https
-    metrics_path: /node-exporter/metrics
+    scrape_interval: 5s
     static_configs:
-      - targets: ['flixlist.tech']
+      - targets:
+        - node-exporter:9100
 
   - job_name: cadvisor
     scrape_interval: 5s
-    scheme: https
-    metrics_path: /cadvisor/metrics
     static_configs:
-      - targets: ['flixlist.tech']
+      - targets:
+        - cadvisor:8080
 
