--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,5 +28,5 @@ jobs:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
           SSH_IP: ${{ secrets.SSH_IP }}
 
-      - name: Print Project Root Dir
-        run: ssh my-vm "cd ${{ secrets.PROJECT_ROOT }} && git fetch && git reset --hard origin/main && docker-compose up -d --build"
+      - name: Deploy to VM
+        run: ssh my-vm "cd ${{ secrets.PROJECT_ROOT }} && git fetch && git reset --hard origin/main && docker-compose down && docker-compose up -d --build"
