Update format of nginx-conf.conf

--- a/user_conf.d/nginx-conf.conf
+++ b/user_conf.d/nginx-conf.conf
@@ -11,30 +11,26 @@ server {
     }
 
     location ~ ^/prometheus(.*)$ {
-	proxy_pass http://prometheus:9090$1;
-	proxy_redirect / /prometheus/;
-	resolver 127.0.0.11;
+        proxy_pass http://prometheus:9090$1;
+        proxy_redirect / /prometheus/;
+        resolver 127.0.0.11;
     }
 
     location ~ ^/node-exporter(.*)$ {
-        add_header Content-Security-Policy "script-src: 'unsafe-eval' 'unsafe-inline';";
-	proxy_pass http://node-exporter:9100$1;
-	resolver 127.0.0.11;
+        proxy_pass http://node-exporter:9100$1;
+        proxy_redirect / /node-exporter/;
+        resolver 127.0.0.11;
     }
 
     location ~ ^/grafana(.*)$ {
-        add_header Content-Security-Policy "script-src: 'unsafe-eval' 'unsafe-inline';";
-	proxy_pass http://grafana:3000$1;
-	resolver 127.0.0.11;
+        proxy_pass http://grafana:3000$1;
+        proxy_redirect / /grafana/;
+        resolver 127.0.0.11;
     }
 
     location / {
         proxy_pass http://web:80/;
-        proxy_set_header Host $http_host;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_redirect http://$http_host/ https://$http_host/;
+        proxy_redirect http://web/ /;
     }
 
     # Load the certificate files.
@@ -46,6 +42,7 @@ server {
 
 server {
     listen 80;
+
     server_name flixlist.tech www.flixlist.tech flixlist.duckdns.org;
 
     location ~ /.well-known/acme-challenge {
