--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,8 +65,8 @@ services:
     container_name: node-exporter
     image: prom/node-exporter
     restart: unless-stopped
-    ports:
-      - 9100:9100
+    # ports:
+    #   - 9100:9100
     volumes:
       - /proc:/host/proc:ro
       - /sys:/host/sys:ro
@@ -82,10 +82,14 @@ services:
     container_name: grafana
     image: grafana/grafana:latest
     user: "1000"
-    ports:
-      - 3000:3000
+    # ports:
+    #   - 3000:3000
     volumes:
       - grafana_data:/var/lib/grafana
+    environment:
+      - GF_SERVER_PROTOCOL=http
+      - GF_SERVER_ROOT_URL=http://flixlist.tech/grafana
+      - GF_SERVER_DOMAIN=www.flixlist.tech
     depends_on:
       - prometheus
     restart: unless-stopped
